tests/baselines/reference/letDeclarations-useBeforeDefinitionInFunctionScope.errors.txt
tests/cases/compiler/letDeclarations-useBeforeDefinitionInFunctionScope.ts(2,5): error TS2448: Block-scoped variable 'a' used before its declaration.


==== tests/cases/compiler/letDeclarations-useBeforeDefinitionInFunctionScope.ts (1 errors) ====
    function foo() {
        a; // No Error
        ~
!!! error TS2448: Block-scoped variable 'a' used before its declaration.
    }
    let a;